// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.auth.v1;

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/auth/v1;auth_v1";

message PublicEcJWK {
  string kty = 1;
  string use = 2;
  string alg = 3;
  string crv = 4;
  string x = 5;
  string y = 6;
}

message AuthToken {
  string token_type = 1;
  string access_token = 2;
  int64 expires_in = 3;
}
